--- a/src/Styles/StyleSections/Navbar.scss
+++ b/src/Styles/StyleSections/Navbar.scss
@@ -8,8 +8,50 @@
     align-items: center;
     padding-inline: 5em;
     width: 100%;
+    margin-bottom: 2em;
+    .display-bar {
+        position: relative;
+        width: 28px;
+        height: 22px;
+        display: none;
+        .div {
+            height: 4px;
+            width: 100%;
+            background-color: var(--text-color);
+            position: absolute;
+            border-radius: 5px;
+            &:nth-child(1) {
+                top: 0;
+            }
+            &:nth-child(2) {
+                top: 50%;
+                transform: scale(.8) translateY(-50%);
+                transform-origin: right;
+            }
+            &:nth-child(3) {
+                top: 100%;
+                transform: scale(1.1) translateY(-100%);
+                transform-origin: right;
+            }
+        }
+        &.active {
+            .div {
+                top: 50%;
+                transform-origin: center;
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+                &:nth-child(2) {
+                    transform: scale(0);
+                }
+                &:nth-child(3) {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
     .light-dark {
-        width: 35px;
+        width: 28px;
         height: 12px;
         border-radius: 5px;
         border: 1px solid var(--text-color);
@@ -79,5 +121,44 @@ a {
     color: var(--text-light);
     &.active {
         color: var(--important-color);
+    }
+}
+
+.SideBar {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 2em 1em 3em 1em;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 300px;
+    background-color: var(--background-color);
+    box-shadow: 0 0 0 100000px rgba(0, 0, 0, 0.2), 3px 0 5px var(--shadow-color);
+    h2 {
+        color: var(--important-color);
+        span {
+            color: var(--text-color);
+        }
+    }
+    .link {
+        display: block;
+        padding: .25em .5em;
+        border-left: .4em solid transparent;
+        margin-bottom: 1em;
+        color: var(--text-color);
+        font-size: 1.2em;
+        &.active {
+            border-left: 3px solid var(--important-color);
+        }
+        &:hover {
+            color: var(--important-color);
+        }
+        svg {
+            color: var(--text-color);
+            margin-right: .4em;
+            width: 1.4em;
+        }
     }
 }
