--- a/src/Styles/StyleSections/aboutSchool.scss
+++ b/src/Styles/StyleSections/aboutSchool.scss
@@ -1,8 +1,7 @@
 .about-school {
     display: flex;
     flex-direction: row;
-    padding: 2em;
-    padding-top: 3em;
+    padding: 0 2em;
     .about-school-left {
         width: 40%;
         padding: 2em;
