third time edited

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -375,12 +375,15 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 2em;
+        margin-top: 2em;
         gap: .3em;
         .students-img-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            padding: 1em;
             .student-img {
-                height: 300px;
-                width: 700px;
+                scroll-behavior: smooth;
+                animation: transform animationDelay(.3s) slideToLeft forwards;
                 img {
                     height: 100%;
                     width: 100%;
@@ -473,6 +476,44 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+    .Achievements {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 2em;
+        gap: .3em;
+        .students-img-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            padding: 1em;
+            .student-img {
+                scroll-behavior: smooth;
+                animation: transform animationDelay(.3s) slideToLeft forwards;
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+        }
+        .circle-button {
+            .circle {
+                width: 6px;
+                height: 6px;
+                display: inline-block;
+                border-radius: 50%;
+                background: #000;
+                opacity: .2;
+                margin-right: .5em;
+                margin-left: .5em;
+                cursor: pointer;
+            }
+            .circle.active {
+                background: #000;
+                opacity: 1;
+            }
+        }
+    }
     .login-form {
         display: flex;
         flex-direction: column;
@@ -734,7 +775,7 @@ body {
             height: 410px;
             gap: 1em;
             .slidinding-card {
-                width: 250px;
+                width: 600px;
                 height: 400px;
                 box-shadow: 0 5px 10px var(--shadow-color);
                 border-radius: 10px;
@@ -807,41 +848,6 @@ body {
                         color: var(--text-color);
                     }
                 }
-            }
-        }
-    }
-    .Achievements {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 2em;
-        gap: .3em;
-        .students-img-container {
-            .student-img {
-                height: 300px;
-                width: 700px;
-                img {
-                    height: 100%;
-                    width: 100%;
-                }
-            }
-        }
-        .circle-button {
-            .circle {
-                width: 6px;
-                height: 6px;
-                display: inline-block;
-                border-radius: 50%;
-                background: #000;
-                opacity: .2;
-                margin-right: .5em;
-                margin-left: .5em;
-                cursor: pointer;
-            }
-            .circle.active {
-                background: #000;
-                opacity: 1;
             }
         }
     }
