--- a/src/Styles/StyleSections/Achievements.scss
+++ b/src/Styles/StyleSections/Achievements.scss
@@ -6,9 +6,11 @@
     margin-top: 2em;
     gap: .3em;
     .students-img-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
         .student-img {
-            height: 438px;
-            width: 960px;
+            width: 100%;
+            height: 100%;
             scroll-behavior: smooth;
             animation: transform animationDelay(.3s) slideToLeft forwards;
             img {
