Fourth time editions

--- a/src/Styles/StyleSections/Achievements.scss
+++ b/src/Styles/StyleSections/Achievements.scss
@@ -5,6 +5,9 @@
     align-items: center;
     margin-top: 2em;
     gap: .3em;
+    .title {
+        color: var(--important-color);
+    }
     .students-img-container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
