--- a/src/Styles/StyleSections/animation.scss
+++ b/src/Styles/StyleSections/animation.scss
@@ -11,9 +11,18 @@
 
 @keyframes slideToLeft {
     from {
-        transform: translateX(-100%);
+        transform: translateX(100%);
     }
     to {
         transform: translateX(0);
+    }
+}
+
+@keyframes opacityToggle {
+    from {
+        opacity: .2;
+    }
+    to {
+        opacity: 1;
     }
 }
