Fifth time edition

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -29,7 +29,7 @@
 }
 
 body {
-    font-family: "Gill Sans", sans-serif;
+    font-family: sans-serif;
     background-color: var(--background-color);
 }
 
