--- a/src/Styles/StyleSections/AchievementsText.scss
+++ b/src/Styles/StyleSections/AchievementsText.scss
@@ -14,6 +14,9 @@
             justify-content: space-between;
             border: 1px solid var(--text-light);
             animation: animationDelay(.5s) slideToLeft forwards;
+            & {
+                color: var(--text-light);
+            }
             &:nth-child(1) {
                 animation-duration: .4s;
             }
